--- a/back/api/static/list.css
+++ b/back/api/static/list.css
@@ -109,3 +109,7 @@
     #question-form button[type="button"]:hover {
         background-color: #5a6268;
     }
+
+    .green{
+        color: green;
+    }
