--- a/back/api/templates/archive.html
+++ b/back/api/templates/archive.html
@@ -1,27 +1,31 @@
 {% extends "base.html" %}
 
-{% block title %}Stuff list{% endblock %}
+{% block title %}Parcels{% endblock %}
 
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'list.css' %}">
-<script src="{% static 'couriers.js' %}"></script>
 
-<h1>Couriers</h1>
+
+<h1>Parcels</h1>
 <table class="staff-table">
     <thead>
         <tr>
-            <th>Address</th>
+            <th>Code</th>
             <th>Name</th>
-            <th>Number</th>
+            <th>Address</th>
+            <th>Status</th>
+
         </tr>
     </thead>
     <tbody id="staff-table-body">
-        {% for i in items %}
+        {% for i in archive %}
         <tr>
-                <td>{{i.name}}</td>
-                <td>{{i.phone_number}}</td>
+                <td>{{i.name_full}}</td>
+                <td>{{i.code}}</td>
                 <td>{{i.address}}</td>
+                <td style="color:green">Approved</td>
+
         </tr>
         {% endfor %}
     </tbody>
